scripts/nullaway/original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8.txt
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/SampleConfiguration.java:32: error: [NullAway] returning @Nullable expression from method with @NonNull return type
				return null;
				^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/Transitions.java:13: error: [NullAway] initializer method does not guarantee @NonNull fields to (line 9), when (line 11) are initialized along all control-flow paths (remember to check for exceptions or early returns).
		public TransitionBuilder(String aFrom, boolean anIsDemotion) {
		       ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/Transitions.java:50: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
						aStates.newStateInstance(to, null): // TODO: create promote issue 
						                             ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/Transitions.java:51: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
						aStates.newStateInstance(from, null); // TODO: create demote issue
						                               ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/SimpleConfiguration.java:20: error: [NullAway] initializer method does not guarantee @NonNull fields initial (line 15), states (line 16), clock (line 17), issuesFactory (line 18) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SimpleConfiguration(
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/SimpleConfiguration.java:104: error: [NullAway] initializer method does not guarantee @NonNull fields promotion (line 101), demotion (line 102) are initialized along all control-flow paths (remember to check for exceptions or early returns).
		public TransitionPair(String aName) {
		       ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/DynamicProxyingHealthServiceTest.java:50: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			healthFactory, null, null);
			               ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/DynamicProxyingHealthServiceTest.java:50: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			healthFactory, null, null);
			                     ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/SimpleThreadSafeHealth.java:41: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		state = factory.newInitialState(null);
		                                ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/SimpleThreadSafeHealth.java:47: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			state = factory.newInitialState(null); // TODO: create an issue
			                                ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/SimpleThreadSafeHealth.java:73: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		success.invoke(null);
		               ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/FastMutableIssue.java:40: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return recent.get();
		^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/DynamicProxyingHealthService.java:76: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return monitoredComponents.get(aMaybeMonitored);
			^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/DynamicProxyingHealthService.java:152: error: [NullAway] passing @Nullable parameter 'anExc.getCause()' where @NonNull is required
					aMonitor.failure(anExc.getCause());
					                               ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/immutable/ImmutableIssue.java:9: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/immutable/ImmutableInstant.java:13: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/immutable/ImmutableInstant.java:23: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/immutable/ImmutableInstant.java:36: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/immutable/ImmutableStatistics.java:17: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/immutable/ImmutableStateInfo.java:10: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/immutable/ImmutableIssues.java:11: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/InMemoryHealthTest.java:34: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
			allowing(stateFactory).newInitialState(null); 
			                                       ^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/AbstractStateTest.java:77: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
				null);
				^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/AbstractStateTest.java:96: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
				null);
				^
    (see http://t.uber.com/nullaway )
../original/urlb7d18764c0_steveliles_health_tgz-pJ8-com_sjl_health_SampleConfigurationJ8/src/com/sjl/health/internal/MutableState.java:76: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
				this : promoter.attempt(success, failure, null);
				                                          ^
    (see http://t.uber.com/nullaway )
25 errors
